monitoring/base/monitoring/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    toolkit.fluxcd.io/tenant: monitoring
  name: monitoring
